--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -16,7 +16,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ExploradorDeLugaresTuristicos"
-        tools:targetApi="31">
+        tools:targetApi="31" >
 
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
@@ -31,13 +31,13 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyAn3RpU5hn3-1J_lhr-cJP03db4RmlZIfY" />
+            android:value="YOUR_API_KEY" />
 
         <activity
             android:name=".SplashScreenActivity"
             android:exported="true"
             android:label="@string/title_activity_splash_screen"
-            android:theme="@style/Theme.ExploradorDeLugaresTuristicos.NoActionBar">
+            android:theme="@style/Theme.ExploradorDeLugaresTuristicos.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -48,7 +48,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.ExploradorDeLugaresTuristicos.NoActionBar">
+            android:theme="@style/Theme.ExploradorDeLugaresTuristicos.NoActionBar" >
 
             <!-- Resto de la configuración -->
         </activity>
